minor fixes / corrected stylesheets

--- a/src/assets/themes/base/styles/blocks/header/search.less
+++ b/src/assets/themes/base/styles/blocks/header/search.less
@@ -1,10 +1,9 @@
 .search {
   flex: 0 0 calc(300px + 2rem);
-  padding-right: 1rem;
 
   &__input {
-    border: 1px solid #ccc;
     padding: 8px;
+    border: 1px solid #ccc;
     border-radius: 2px;
   }
 
@@ -12,6 +11,7 @@
     width: 50px;
     vertical-align: middle;
     margin-left: 0.4rem;
+    border: 0;
     background-color: #111111;
   }
 
