--- a/src/assets/themes/base/styles/blocks/main/article-card.less
+++ b/src/assets/themes/base/styles/blocks/main/article-card.less
@@ -11,14 +11,13 @@
 
   &__link-image {
     width: 100%;
-    display: block;
+    height: auto !important;
   }
 
   &__header {
     margin: 1rem 1.5rem;
 
-    font-size: 2.6rem;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 1em;
   }
 
