--- a/src/assets/themes/base/styles/common/colors.less
+++ b/src/assets/themes/base/styles/common/colors.less
@@ -15,3 +15,18 @@
 @color__blue-lighter: #7DB1EF;
 
 @color__orange: #FF9800;
+
+/* Fill colors
+
+._fill-pink {
+  stroke: pink;
+}
+
+._fill-red:hover {
+  stroke: red;
+}
+
+._fill-purple:hover {
+  stroke: purple;
+}*/
+
