--- a/src/assets/themes/base/styles/blocks/layout.less
+++ b/src/assets/themes/base/styles/blocks/layout.less
@@ -9,5 +9,10 @@
   &__main {
     display: flex;
     background-color: #242425;
+
+    &-wrapper {
+      display: flex;
+      flex-basis: 100%;
+    }
   }
 }
