--- a/src/assets/themes/base/styles/blocks/main/article-card.less
+++ b/src/assets/themes/base/styles/blocks/main/article-card.less
@@ -17,7 +17,8 @@
   &__header {
     margin: 1rem 1.5rem;
 
-    font-weight: 900;
+    font-size: 2rem;
+    font-weight: 800;
     line-height: 1em;
   }
 
@@ -50,6 +51,7 @@
 
   &__text {
     margin: 1rem 1.5rem;
+    font-size: 0.9rem;
   }
 
   &__text-more {
