--- a/src/assets/themes/base/styles/blocks/footer/footer-colophon.less
+++ b/src/assets/themes/base/styles/blocks/footer/footer-colophon.less
@@ -19,8 +19,6 @@
 
   &__center {
     flex: 1;
-    flex-direction: column;
-    padding: 0;
     background: #d5d5d5;
 
     &-top {
@@ -48,7 +46,7 @@
       background: rgba(0, 0, 0, 0.1);
 
       &-link {
-        flex: 30%;
+        flex-basis: 30%;
         font-size: 1.3rem;
         font-weight: 600;
         text-decoration: none;
@@ -57,6 +55,14 @@
         &:hover {
           font-weight: 800;
         }
+
+        @media (max-width: 550px) {
+          display: block;
+        }
+      }
+
+      @media (max-width: 550px) {
+        display: block;
       }
     }
   }
