--- a/src/assets/themes/base/styles/blocks/header/menu-toggle-area.less
+++ b/src/assets/themes/base/styles/blocks/header/menu-toggle-area.less
@@ -15,4 +15,16 @@
       fill: white;
     }
   }
+
+  @media (max-width: 1085px) {
+    display: block;
+    margin-right: 10px;
+    padding: 0 1rem;
+  }
+
+  @media (max-width: 850px) {
+    padding: 0;
+    margin-left: 0;
+    margin-right: 1rem;
+  }
 }
