--- a/src/assets/themes/base/styles/blocks/header/middle-area.less
+++ b/src/assets/themes/base/styles/blocks/header/middle-area.less
@@ -1,3 +1,10 @@
 .middle-area {
-  flex: 1;
+  padding-top: 8px;
+
+  @media (max-width: 1085px) {
+    &__icon {
+      width: 190px;
+      height: 24px;
+    }
+  }
 }
